# py-rbush

./: .clang-format  .gitignore  404.html  LICENSE  Makefile  README.md  build.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: benchmark.yml  docs.yml  lint.yml  test.yml
_rbush/: _rbush.cc  _rbush.h  debug.h  module.cc
benchmarks/: performance.py
developer_guide/: index.html
docs/: developer_guide.md  index.md  user_guide.md
rbush/: __init__.py  debug.py
search/: search_index.json
tests/: test_rbush.py
user_guide/: index.html
